--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
